Replace liveness probe & update images
Updating to latest snapshot images. File-based "wait"
being replaced with standard port-based liveness probe to
fix cassandra from not starting for AAF.

Change-Id: If08d6bbf766abfcebe14d23894cde9c21c96c510
Issue-ID: AAF-557
Signed-off-by: Mike Elliott <mike.elliott@amdocs.com>

--- a/charts/aaf-cs/templates/deployment.yaml
+++ b/charts/aaf-cs/templates/deployment.yaml
@@ -63,8 +63,8 @@ spec:
           periodSeconds: {{ .Values.liveness.periodSeconds }}
         {{ end -}}
         readinessProbe:
-          exec:
-            command: ["/bin/bash","/opt/app/aaf/cass_init/cmd.sh","wait"]
+          tcpSocket:
+            port: {{ .Values.service.internalPort3 }}
           initialDelaySeconds: {{ .Values.readiness.initialDelaySeconds }}
           periodSeconds: {{ .Values.readiness.periodSeconds }}
         resources:
