Recommended AAF/OOM Changes
This incorporats Mike E's changes as well as recommended
changes from Abandoned 70511 (merges from multiple
machines got too hard.)

Made Olaf recommended changes.  Changed to non-SNAPSHOT in
anticipation of LF releasing this morning

Put Versions back to "2.1.5-SNAPSHOT"  Brian F reminded
me that GWu's scripts handle version changes for
Envs.

Issue-ID: AAF-557
Change-Id: I3e81a9c65df356d1d27b0d453e09c9ed3a81f803
Signed-off-by: Instrumental <jonathan.gathman@att.com>

--- a/charts/aaf-hello/values.yaml
+++ b/charts/aaf-hello/values.yaml
@@ -25,7 +25,8 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_hello:2.1.4-SNAPSHOT
+image: onap/aaf/aaf_hello:2.1.5-SNAPSHOT
+aaf_register_as: "aaf-hello.onap"
 pullPolicy: Always
 
 
