--- a/charts/aaf-gui/values.yaml
+++ b/charts/aaf-gui/values.yaml
@@ -1,3 +1,4 @@
+
 # Copyright © 2017 Amdocs, Bell Canada
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -25,7 +26,8 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_gui:2.1.4-SNAPSHOT
+image: onap/aaf/aaf_gui:2.1.5-SNAPSHOT
+aaf_register_as: "aaf-gui.onap"
 pullPolicy: Always
 
 
