--- a/values.yaml
+++ b/values.yaml
@@ -21,6 +21,7 @@ global:
   readinessImage: readiness-check:2.0.0
   ubuntuInitRepository: registry.hub.docker.com
   ubuntuInitImage: oomk8s/ubuntu-init:2.0.0
+  configImage: onap/aaf/aaf_config:2.1.5-SNAPSHOT
   persistence:
     enabled: true
 
@@ -29,16 +30,13 @@ global:
     cadi_latitude: "38.0"
     cadi_longitude: "-72.0"
     aaf_env: "DEV"
-    aaf_register_as: "aaf.onap"
-  cassandraServiceName: aaf-cass
-  locateServiceName: aaf-locate
+    cass_host: "aaf-cass.onap"
+    cadi_locator_as: "aaf-locate.onap"
 
 #################################################################
 # Application configuration defaults.
 #################################################################
 repository: nexus3.onap.org:10001
-aaf_config:
-  image: onap/aaf/aaf_config:2.1.4-SNAPSHOT
 
 flavor: small
 # default number of instances
