--- a/charts/aaf-locate/values.yaml
+++ b/charts/aaf-locate/values.yaml
@@ -25,7 +25,7 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_locate:2.1.5-SNAPSHOT
+image: onap/aaf/aaf_locate:2.1.5
 aaf_register_as: "aaf-locate.onap"
 pullPolicy: Always
 
