Sync docker tags with release manifest
Sync docker tags with the release manifest from integration
repo commit 90e136c83ec5434abaeb9939b995f86aa4089850.

Change-Id: I771393adb429087752dc52df2cd2812dc9ff6a11
Issue-ID: INT-663
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/charts/aaf-sshsm/charts/aaf-sshsm-testca/values.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-testca/values.yaml
@@ -23,7 +23,7 @@ enabled: true
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/testcaservice:latest
+image: onap/aaf/testcaservice:3.0.0
 pullPolicy: Always
 
 # flag to enable debugging - application support required
