--- a/charts/aaf-sshsm/charts/aaf-sshsm-distcenter/values.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-distcenter/values.yaml
@@ -23,7 +23,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/distcenter:latest
+image: onap/aaf/distcenter:3.0.0
 pullPolicy: Always
 
 # flag to enable debugging - application support required
