update OOM for 2.1.6
Issue-ID: AAF-571
Change-Id: I95f1f9c1604c36bc76eb556c7f35fdb8caceba57
Signed-off-by: Instrumental <jonathan.gathman@att.com>

--- a/charts/aaf-cm/templates/deployment.yaml
+++ b/charts/aaf-cm/templates/deployment.yaml
@@ -68,7 +68,7 @@ spec:
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
       containers:
       - name: {{ include "common.name" . }}
-        command: ["/bin/bash","/opt/app/aaf/bin/cm"]
+        command: ["/bin/bash","/opt/app/aaf/pod/pod_wait.sh","aaf_cm","sleep","0","cd /opt/app/aaf;bin/cm"]
         image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         volumeMounts:
