--- a/charts/aaf-locate/templates/deployment.yaml
+++ b/charts/aaf-locate/templates/deployment.yaml
@@ -34,7 +34,6 @@ spec:
       - name: {{ include "common.name" . }}-config-container
         image: "{{ include "common.repository" . }}/{{ .Values.global.configImage }}"
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
-
         volumeMounts:
           - mountPath: "/opt/app/osaaf"
             name: {{ include "common.name" . }}-config-vol
@@ -69,7 +68,7 @@ spec:
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
       containers:
       - name: {{ include "common.name" . }}
-        command: ["/bin/bash","/opt/app/aaf/bin/locate"]
+        command: ["/bin/bash","/opt/app/aaf/pod/pod_wait.sh","aaf_locate","sleep","0","cd /opt/app/aaf;bin/locate"]
         image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         volumeMounts:
