--- a/charts/aaf-gui/values.yaml
+++ b/charts/aaf-gui/values.yaml
@@ -26,7 +26,7 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_gui:2.1.5
+image: onap/aaf/aaf_gui:2.1.6-SNAPSHOT
 aaf_register_as: "aaf-gui.onap"
 pullPolicy: Always
 
