--- a/charts/aaf-hello/values.yaml
+++ b/charts/aaf-hello/values.yaml
@@ -25,7 +25,7 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_hello:2.1.5
+image: onap/aaf/aaf_hello:2.1.6-SNAPSHOT
 aaf_register_as: "aaf-hello.onap"
 pullPolicy: Always
 
