Move to AAF 2.1.7 Release
Issue-ID: AAF-620
Change-Id: Iafdc20818e52dab4b6ab56a8053553d6dfe02e6a
Signed-off-by: Instrumental <jonathan.gathman@att.com>

--- a/charts/aaf-cs/values.yaml
+++ b/charts/aaf-cs/values.yaml
@@ -24,7 +24,7 @@ flavor: small
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/aaf_cass:2.1.7-SNAPSHOT
+image: onap/aaf/aaf_cass:2.1.7
 pullPolicy: Always
 
 # application configuration
