Reconfigure nodeport usage
Removed the nodeport usage for sms-db
Converted all multicloud-prometheus charts
to use ClusterIP for now. We can allocate
nodeports for them later on when the services
are requested by other services in multicloud.
Also, disabled the multicloud-prometheus charts from starting up by default.
Change once dependent charts or services are added.

Issue-ID: OOM-1555
Change-Id: I2dddc54015844de3abbbf786f95b8bb6eba92d86
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/charts/aaf-sms/charts/aaf-sms-vault/values.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-vault/values.yaml
@@ -81,11 +81,11 @@ persistence:
   mountSubPath: sms/consul/data
 
 service:
-  type: NodePort
+  type: ClusterIP
   name: aaf-sms-db
   portName: aaf-sms-db
   internalPort: 8200
-  nodePort: 44
+  externalPort: 8200
 
 ingress:
   enabled: false
