global image pull issue Issue-ID: OOM-1563
Change-Id: I383dbec29291ba5b13d613f60d8eb343b9c59dda
Signed-off-by: dkamdocs <devesh.kumar@amdocs.com>

--- a/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-quorumclient/templates/statefulset.yaml
@@ -34,7 +34,7 @@ spec:
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         name: {{ include "common.name" . }}
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         command: ["/quorumclient/bin/quorumclient"]
         workingDir: /quorumclient/
         volumeMounts:
