--- a/charts/aaf-sms/templates/deployment.yaml
+++ b/charts/aaf-sms/templates/deployment.yaml
@@ -49,7 +49,7 @@ spec:
               fieldPath: metadata.namespace
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         name: {{ include "common.name" . }}
         command: ["/sms/bin/sms"]
         workingDir: /sms/
