--- a/charts/aaf-sms/templates/job.yaml
+++ b/charts/aaf-sms/templates/job.yaml
@@ -51,7 +51,7 @@ spec:
               fieldPath: metadata.namespace
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         name: {{ include "common.name" . }}-preload
         command:
           - "/sms/bin/preload"
