--- a/charts/aaf-sshsm/charts/aaf-sshsm-abrmd/templates/job.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-abrmd/templates/job.yaml
@@ -38,7 +38,7 @@ spec:
       containers:
       - name: {{ include "common.name" . }}-job
         image: "{{ include "common.repository" . }}/{{ .Values.image }}"
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         command: ["/abrmd/bin/initialize_tpm.sh"]
         workingDir: /abrmd/bin
         securityContext:
