--- a/charts/aaf-sshsm/charts/aaf-sshsm-distcenter/templates/job.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-distcenter/templates/job.yaml
@@ -73,7 +73,7 @@ spec:
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         name: {{ include "common.name" . }}
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         command: ["/entrypoint.sh"]
         workingDir: /distcenter
         volumeMounts:
