--- a/charts/aaf-sshsm/charts/aaf-sshsm-testca/templates/job.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-testca/templates/job.yaml
@@ -70,7 +70,7 @@ spec:
       containers:
       - image: "{{ include "common.repository" . }}/{{ .Values.image }}"
         name: {{ include "common.name" . }}
-        imagePullPolicy: {{ .Values.pullPolicy }}
+        imagePullPolicy: {{ .Values.global.pullPolicy | default .Values.pullPolicy }}
         command: ["./import.sh"]
         workingDir: /testca/bin
         env:
