AAF to Release version 2.1.13
Also upped SMS/SSHSM versions
Issue-ID: AAF-823
Change-Id: I27de5079cd678d0206238873b81cb55b5612a67a
Signed-off-by: Gathman, Jonathan (jg1555) <jg1555@us.att.com>

--- a/values.yaml
+++ b/values.yaml
@@ -29,7 +29,7 @@ global:
   # repository: "nexus3.onap.org:10003"
 
   aaf:
-    imageVersion: 2.1.12-SNAPSHOT
+    imageVersion: 2.1.13
     #imageVersion: latest
     readiness: false
     aaf_env: "DEV"
