--- a/charts/aaf-sms/charts/aaf-sms-quorumclient/values.yaml
+++ b/charts/aaf-sms/charts/aaf-sms-quorumclient/values.yaml
@@ -28,7 +28,7 @@ global:
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/smsquorumclient:3.0.1
+image: onap/aaf/smsquorumclient:4.0.0-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
