--- a/charts/aaf-sshsm/charts/aaf-sshsm-abrmd/values.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-abrmd/values.yaml
@@ -21,7 +21,7 @@
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/abrmd:3.0.0
+image: onap/aaf/abrmd:4.0.0-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
