--- a/charts/aaf-sshsm/charts/aaf-sshsm-testca/values.yaml
+++ b/charts/aaf-sshsm/charts/aaf-sshsm-testca/values.yaml
@@ -23,7 +23,7 @@ enabled: true
 #################################################################
 # application image
 repository: nexus3.onap.org:10001
-image: onap/aaf/testcaservice:3.0.0
+image: onap/aaf/testcaservice:4.0.0-SNAPSHOT-latest
 pullPolicy: Always
 
 # flag to enable debugging - application support required
