--- a/charts/aaf-sms/templates/service.yaml
+++ b/charts/aaf-sms/templates/service.yaml
@@ -28,7 +28,7 @@ spec:
   - name: {{ .Values.service.PortName }}
     {{if eq .Values.service.type "NodePort" -}}
     port: {{ .Values.service.internalPort }}
-    nodePort: {{ .Values.global.nodePortPrefix | default "302" }}{{ .Values.service.nodePort }}
+    nodePort: {{ .Values.global.nodePortPrefix | default .Values.nodePortPrefix }}{{ .Values.service.nodePort }}
     {{- else -}}
     port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
