Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,2 +1,6 @@
 [access]
 	inheritFrom = aaf
+[access "refs/*"]
+	forgeCommitter = group ldap/lf-gerrit-transfer
+	push = +force group ldap/lf-gerrit-transfer
+	pushMerge = group ldap/lf-gerrit-transfer
