Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,3 +4,4 @@
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
 	pushMerge = group ldap/lf-gerrit-transfer
+	owner = group ldap/lf-gerrit-transfer
