--- a/project.config
+++ b/project.config
@@ -5,3 +5,4 @@
 	push = +force group ldap/lf-gerrit-transfer
 	pushMerge = group ldap/lf-gerrit-transfer
 	create = group ldap/lf-gerrit-transfer
+	owner = group ldap/lf-gerrit-transfer
