Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = aaf
+	inheritFrom = All-Projects
 [access "refs/*"]
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
