Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,8 +1,8 @@
 [access]
 	inheritFrom = All-Projects
-[access "refs/*"]
+[access "refs/heads/master"]
+	create = group ldap/lf-gerrit-transfer
 	forgeCommitter = group ldap/lf-gerrit-transfer
+	owner = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
 	pushMerge = group ldap/lf-gerrit-transfer
-	create = group ldap/lf-gerrit-transfer
-	owner = group ldap/lf-gerrit-transfer
