Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [access]
 	inheritFrom = All-Projects
-[access "refs/heads/master"]
+[access "refs/*"]
 	create = group ldap/lf-gerrit-transfer
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	owner = group ldap/lf-gerrit-transfer
