Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,5 +1,5 @@
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = aaf
 [access "refs/*"]
 	create = group ldap/lf-gerrit-transfer
 	forgeCommitter = group ldap/lf-gerrit-transfer
