--- a/project.config
+++ b/project.config
@@ -6,3 +6,5 @@
 	owner = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
 	pushMerge = group ldap/lf-gerrit-transfer
+	createSignedTag = group ldap/lf-gerrit-transfer
+	createTag = group ldap/lf-gerrit-transfer
