Modify access rules

--- a/project.config
+++ b/project.config
@@ -8,3 +8,9 @@
 	pushMerge = group ldap/lf-gerrit-transfer
 	createSignedTag = group ldap/lf-gerrit-transfer
 	createTag = group ldap/lf-gerrit-transfer
+	addPatchSet = group ldap/lf-gerrit-transfer
+	forgeAuthor = group ldap/lf-gerrit-transfer
+	forgeServerAsCommitter = group ldap/lf-gerrit-transfer
+	rebase = group ldap/lf-gerrit-transfer
+	submit = group ldap/lf-gerrit-transfer
+	submitAs = group ldap/lf-gerrit-transfer
