Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,4 +3,5 @@
 [access "refs/*"]
 	create = group ldap/lf-gerrit-transfer
 	addPatchSet = group ldap/lf-gerrit-transfer
-	push = group ldap/lf-gerrit-transfer
+	push = +force group ldap/lf-gerrit-transfer
+	exclusiveGroupPermissions = push
