--- a/project.config
+++ b/project.config
@@ -4,4 +4,4 @@
 	create = group ldap/lf-gerrit-transfer
 	addPatchSet = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
-	exclusiveGroupPermissions = push
+	pushMerge = group ldap/lf-gerrit-transfer
