Modify access rules

--- a/project.config
+++ b/project.config
@@ -7,3 +7,6 @@
 	pushMerge = group ldap/lf-gerrit-transfer
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	owner = group ldap/lf-gerrit-transfer
+	createSignedTag = group ldap/lf-gerrit-transfer
+	createTag = group ldap/lf-gerrit-transfer
+	forgeAuthor = group ldap/lf-gerrit-transfer
