Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,12 +1,12 @@
 [access]
 	inheritFrom = aaf
-[access "refs/*"]
-	create = group ldap/lf-gerrit-transfer
+[access "refs/heads/*"]
 	addPatchSet = group ldap/lf-gerrit-transfer
-	push = +force group ldap/lf-gerrit-transfer
-	pushMerge = group ldap/lf-gerrit-transfer
-	forgeCommitter = group ldap/lf-gerrit-transfer
-	owner = group ldap/lf-gerrit-transfer
+	create = group ldap/lf-gerrit-transfer
 	createSignedTag = group ldap/lf-gerrit-transfer
 	createTag = group ldap/lf-gerrit-transfer
 	forgeAuthor = group ldap/lf-gerrit-transfer
+	forgeCommitter = group ldap/lf-gerrit-transfer
+	owner = group ldap/lf-gerrit-transfer
+	push = +force group ldap/lf-gerrit-transfer
+	pushMerge = group ldap/lf-gerrit-transfer
