Modify access rules

--- a/project.config
+++ b/project.config
@@ -9,4 +9,5 @@
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	owner = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
+	push = +force group ldap/lf-releng
 	pushMerge = group ldap/lf-gerrit-transfer
