Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [access]
 	inheritFrom = aaf
-[access "refs/heads/*"]
+[access "refs/*"]
 	addPatchSet = group ldap/lf-gerrit-transfer
 	create = group ldap/lf-gerrit-transfer
 	createSignedTag = group ldap/lf-gerrit-transfer
@@ -9,5 +9,4 @@
 	forgeCommitter = group ldap/lf-gerrit-transfer
 	owner = group ldap/lf-gerrit-transfer
 	push = +force group ldap/lf-gerrit-transfer
-	push = +force group ldap/lf-releng
 	pushMerge = group ldap/lf-gerrit-transfer
