Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,4 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-aaf-oom-committers
+	read = group GitHub Replication
