--- a/project.config
+++ b/project.config
@@ -2,4 +2,5 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group ldap/onap-gerrit-aaf-oom-committers
+	owner = group saml/onap-gerrit-aaf-oom-committers
 	read = group GitHub Replication
